# realtime-object-detection-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/detectors/: __init__.py  base.py  factory.py  mock.py  yolo.py
backend/app/services/: __init__.py  connection_limiter.py  frame_processor.py  metrics.py
backend/tests/: test_metrics.py  test_mock_detector.py  test_stream_controls.py
config/: dashboard.example.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: ConfidenceTimeline.tsx  ConnectionControls.tsx  DetectionStage.tsx  EventStream.tsx  StatsCards.tsx
frontend/src/lib/: streamClient.ts
